k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: catvsdog
  labels:
    name: catvsdog
    app: ml-classifier
